<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Find Job" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_cv_correction"
            android:icon="@drawable/ic_cv"
            android:title="@string/cv_correction" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>